// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FloatingActionButton /> should render a loading neutral button with an inverted spinner 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 99;
  right: 16px;
  bottom: 16px;
  border-radius: 9999px;
  box-shadow: 0px 16px 12px 0px hsla(200,10%,18%,0.06);
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  z-index: 1;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c10.c10.c10.c10.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1.c1.c1.c1.c1 {
  min-height: 48px;
  width: auto;
  cursor: not-allowed;
  background-color: hsla(0,0%,0%,0.18);
  border: none;
  border-radius: 9999px;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-image: none;
  -webkit-transition-property: background-color,background-image,box-shadow;
  transition-property: background-color,background-image,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c1.c1.c1.c1.c1:hover {
  background-color: hsla(0,0%,0%,0.18);
  background-image: none;
}

.c1.c1.c1.c1.c1:active {
  background-color: hsla(0,0%,0%,0.18);
  background-image: none;
}

.c1.c1.c1.c1.c1:focus-visible {
  background-color: hsla(0,0%,0%,0.18);
  outline: 1px solid hsla(218,89%,51%,0.09);
  background-image: none;
  box-shadow: 0px 0px 0px 4px hsla(206,10%,29%,0.12);
}

.c1.c1.c1.c1.c1 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c2.c2.c2.c2.c2 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c11.c11.c11.c11.c11 {
  color: hsla(0,0%,100%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
  margin-right: 4px;
  margin-left: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  width: 36px;
  height: 36px;
  gap: 3px;
}

.c5.c5.c5.c5.c5 {
  width: 6px;
  height: 6px;
  border-radius: 50%;
  background-color: hsla(0,0%,100%,1);
  opacity: 0.42;
  -webkit-animation: fMCYFL-450290765 1200ms ease-in-out 0ms infinite;
  animation: fMCYFL-450290765 1200ms ease-in-out 0ms infinite;
}

.c6.c6.c6.c6.c6 {
  width: 6px;
  height: 6px;
  border-radius: 50%;
  background-color: hsla(0,0%,100%,1);
  opacity: 0.42;
  -webkit-animation: fMCYFL-450290765 1200ms ease-in-out 150ms infinite;
  animation: fMCYFL-450290765 1200ms ease-in-out 150ms infinite;
}

.c7.c7.c7.c7.c7 {
  width: 6px;
  height: 6px;
  border-radius: 50%;
  background-color: hsla(0,0%,100%,1);
  opacity: 0.42;
  -webkit-animation: fMCYFL-450290765 1200ms ease-in-out 300ms infinite;
  animation: fMCYFL-450290765 1200ms ease-in-out 300ms infinite;
}

.c9.c9.c9.c9.c9 {
  opacity: 0;
}

@media (prefers-reduced-motion:reduce) {
  .c5.c5.c5.c5.c5 {
    -webkit-animation: none;
    animation: none;
  }
}

@media (prefers-reduced-motion:reduce) {
  .c6.c6.c6.c6.c6 {
    -webkit-animation: none;
    animation: none;
    -webkit-transform: translateY(-7.5px);
    -ms-transform: translateY(-7.5px);
    transform: translateY(-7.5px);
    opacity: 1;
  }
}

@media (prefers-reduced-motion:reduce) {
  .c7.c7.c7.c7.c7 {
    -webkit-animation: none;
    animation: none;
  }
}

<div>
  <div
    class="c0"
    data-blade-component="floating-action-button"
    elevation="midRaised"
  >
    <button
      class="c1"
      data-blade-component="button"
      disabled=""
      role="button"
      type="button"
    >
      <div
        class=" c2"
        data-blade-component="base-box"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <span
            aria-hidden="true"
            class="c4"
            data-blade-component="dot-loader"
          >
            <span
              class="c5"
            />
            <span
              class="c6"
            />
            <span
              class="c7"
            />
          </span>
        </div>
        <div
          class="c8 c9"
          data-blade-component="base-box"
        >
          <div
            class="c10"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5V11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H11V19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19V13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11H13V5Z"
                data-blade-component="svg-path"
                fill="hsla(0, 0%, 100%, 0.32)"
              />
            </svg>
          </div>
          <div
            class="c11"
            data-blade-component="base-text"
          >
            Create payment
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<FloatingActionButton /> should render as an icon-only button when children is omitted 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 99;
  right: 16px;
  bottom: 16px;
  border-radius: 9999px;
  box-shadow: 0px 16px 12px 0px hsla(200,10%,18%,0.06);
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1.c1.c1.c1.c1 {
  min-height: 48px;
  height: 48px;
  width: 48px;
  cursor: pointer;
  background-color: hsla(218,89%,51%,1);
  border: none;
  border-radius: 9999px;
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,89%,51%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-image: radial-gradient(72px 72px at var(--mouse-x,0%) var(--mouse-y,0%),hsla(0,0%,100%,0.18) 0%,transparent 100%);
  -webkit-transition-property: background-color,background-image,box-shadow;
  transition-property: background-color,background-image,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c1.c1.c1.c1.c1:hover {
  background-color: hsla(218,87%,43%,1);
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  background-image: none;
}

.c1.c1.c1.c1.c1:active {
  background-color: hsla(218,87%,43%,1);
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  background-image: none;
}

.c1.c1.c1.c1.c1:focus-visible {
  background-color: hsla(218,87%,43%,1);
  outline: 1px solid hsla(218,89%,51%,0.09);
  background-image: none;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18),inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
}

.c1.c1.c1.c1.c1 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c2.c2.c2.c2.c2 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c4.c4.c4.c4.c4 {
  opacity: 1;
}

<div>
  <div
    class="c0"
    data-blade-component="floating-action-button"
    elevation="midRaised"
  >
    <button
      aria-label="Create payment"
      class="c1"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c2"
        data-blade-component="base-box"
      >
        <div
          class="c3 c4"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5V11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H11V19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19V13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11H13V5Z"
                data-blade-component="svg-path"
                fill="hsla(0, 0%, 100%, 1)"
              />
            </svg>
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<FloatingActionButton /> should render neutral color 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 99;
  right: 16px;
  bottom: 16px;
  border-radius: 9999px;
  box-shadow: 0px 16px 12px 0px hsla(200,10%,18%,0.06);
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1.c1.c1.c1.c1 {
  min-height: 48px;
  width: auto;
  cursor: pointer;
  background-color: hsla(0,0%,0%,1);
  border: none;
  border-radius: 9999px;
  box-shadow: inset 0 -1.5px 0px 0px hsla(0,0%,0%,1),inset 0 0px 0px 0.5px hsla(0,0%,0%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.32),inset 0 -2px 0px 0px hsla(0,0%,100%,0.32);
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-image: radial-gradient(72px 72px at var(--mouse-x,0%) var(--mouse-y,0%),hsla(0,0%,100%,0.18) 0%,transparent 100%);
  -webkit-transition-property: background-color,background-image,box-shadow;
  transition-property: background-color,background-image,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c1.c1.c1.c1.c1:hover {
  background-color: hsla(0,0%,12%,1);
  box-shadow: inset 0 -1.5px 0px 0px hsla(0,0%,0%,1),inset 0 0px 0px 0.5px hsla(0,0%,0%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.32),inset 0 -2px 0px 0px hsla(0,0%,100%,0.32);
  background-image: none;
}

.c1.c1.c1.c1.c1:active {
  background-color: hsla(0,0%,12%,1);
  box-shadow: inset 0 -1.5px 0px 0px hsla(0,0%,0%,1),inset 0 0px 0px 0.5px hsla(0,0%,0%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.32),inset 0 -2px 0px 0px hsla(0,0%,100%,0.32);
  background-image: none;
}

.c1.c1.c1.c1.c1:focus-visible {
  background-color: hsla(0,0%,12%,1);
  outline: 1px solid hsla(218,89%,51%,0.09);
  background-image: none;
  box-shadow: 0px 0px 0px 4px hsla(206,10%,29%,0.12),inset 0 -1.5px 0px 0px hsla(0,0%,0%,1),inset 0 0px 0px 0.5px hsla(0,0%,0%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.32),inset 0 -2px 0px 0px hsla(0,0%,100%,0.32);
}

.c1.c1.c1.c1.c1 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c2.c2.c2.c2.c2 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c6.c6.c6.c6.c6 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
  margin-right: 4px;
  margin-left: 4px;
}

.c4.c4.c4.c4.c4 {
  opacity: 1;
}

<div>
  <div
    class="c0"
    data-blade-component="floating-action-button"
    elevation="midRaised"
  >
    <button
      class="c1"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c2"
        data-blade-component="base-box"
      >
        <div
          class="c3 c4"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5V11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H11V19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19V13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11H13V5Z"
                data-blade-component="svg-path"
                fill="hsla(0, 0%, 100%, 1)"
              />
            </svg>
          </div>
          <div
            class="c6"
            data-blade-component="base-text"
          >
            Create payment
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<FloatingActionButton /> should render primary color 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 99;
  right: 16px;
  bottom: 16px;
  border-radius: 9999px;
  box-shadow: 0px 16px 12px 0px hsla(200,10%,18%,0.06);
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1.c1.c1.c1.c1 {
  min-height: 48px;
  width: auto;
  cursor: pointer;
  background-color: hsla(218,89%,51%,1);
  border: none;
  border-radius: 9999px;
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,89%,51%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-image: radial-gradient(72px 72px at var(--mouse-x,0%) var(--mouse-y,0%),hsla(0,0%,100%,0.18) 0%,transparent 100%);
  -webkit-transition-property: background-color,background-image,box-shadow;
  transition-property: background-color,background-image,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c1.c1.c1.c1.c1:hover {
  background-color: hsla(218,87%,43%,1);
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  background-image: none;
}

.c1.c1.c1.c1.c1:active {
  background-color: hsla(218,87%,43%,1);
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  background-image: none;
}

.c1.c1.c1.c1.c1:focus-visible {
  background-color: hsla(218,87%,43%,1);
  outline: 1px solid hsla(218,89%,51%,0.09);
  background-image: none;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18),inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
}

.c1.c1.c1.c1.c1 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c2.c2.c2.c2.c2 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c6.c6.c6.c6.c6 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
  margin-right: 4px;
  margin-left: 4px;
}

.c4.c4.c4.c4.c4 {
  opacity: 1;
}

<div>
  <div
    class="c0"
    data-blade-component="floating-action-button"
    elevation="midRaised"
  >
    <button
      class="c1"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c2"
        data-blade-component="base-box"
      >
        <div
          class="c3 c4"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5V11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H11V19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19V13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11H13V5Z"
                data-blade-component="svg-path"
                fill="hsla(0, 0%, 100%, 1)"
              />
            </svg>
          </div>
          <div
            class="c6"
            data-blade-component="base-text"
          >
            Create payment
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<FloatingActionButton /> should render white color 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 99;
  right: 16px;
  bottom: 16px;
  border-radius: 9999px;
  box-shadow: 0px 16px 12px 0px hsla(200,10%,18%,0.06);
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1.c1.c1.c1.c1 {
  min-height: 48px;
  width: auto;
  cursor: pointer;
  background-color: hsla(0,0%,100%,1);
  border: none;
  border-radius: 9999px;
  box-shadow: inset 0 -1.5px 0px 0px hsla(0,0%,0%,0.18),inset 0 0px 0px 0.5px hsla(0,0%,0%,0.18);
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-image: radial-gradient(72px 72px at var(--mouse-x,0%) var(--mouse-y,0%),hsla(0,0%,100%,0.18) 0%,transparent 100%);
  -webkit-transition-property: background-color,background-image,box-shadow;
  transition-property: background-color,background-image,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c1.c1.c1.c1.c1:hover {
  background-color: hsla(0,0%,100%,0.8);
  box-shadow: inset 0 -1.5px 0px 0px hsla(0,0%,0%,0.18),inset 0 0px 0px 0.5px hsla(0,0%,0%,0.18);
  background-image: none;
}

.c1.c1.c1.c1.c1:active {
  background-color: hsla(0,0%,100%,0.8);
  box-shadow: inset 0 -1.5px 0px 0px hsla(0,0%,0%,0.18),inset 0 0px 0px 0.5px hsla(0,0%,0%,0.18);
  background-image: none;
}

.c1.c1.c1.c1.c1:focus-visible {
  background-color: hsla(0,0%,100%,0.8);
  outline: 1px solid hsla(218,89%,51%,0.09);
  background-image: none;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18),inset 0 -1.5px 0px 0px hsla(0,0%,0%,0.18),inset 0 0px 0px 0.5px hsla(0,0%,0%,0.18);
}

.c1.c1.c1.c1.c1 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c2.c2.c2.c2.c2 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c6.c6.c6.c6.c6 {
  color: hsla(0,0%,0%,0.72);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
  margin-right: 4px;
  margin-left: 4px;
}

.c4.c4.c4.c4.c4 {
  opacity: 1;
}

<div>
  <div
    class="c0"
    data-blade-component="floating-action-button"
    elevation="midRaised"
  >
    <button
      class="c1"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c2"
        data-blade-component="base-box"
      >
        <div
          class="c3 c4"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5V11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H11V19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19V13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11H13V5Z"
                data-blade-component="svg-path"
                fill="hsla(0, 0%, 0%, 0.72)"
              />
            </svg>
          </div>
          <div
            class="c6"
            data-blade-component="base-text"
          >
            Create payment
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<FloatingActionButton /> should render with a label 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 99;
  right: 16px;
  bottom: 16px;
  border-radius: 9999px;
  box-shadow: 0px 16px 12px 0px hsla(200,10%,18%,0.06);
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1.c1.c1.c1.c1 {
  min-height: 48px;
  width: auto;
  cursor: pointer;
  background-color: hsla(218,89%,51%,1);
  border: none;
  border-radius: 9999px;
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,89%,51%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-image: radial-gradient(72px 72px at var(--mouse-x,0%) var(--mouse-y,0%),hsla(0,0%,100%,0.18) 0%,transparent 100%);
  -webkit-transition-property: background-color,background-image,box-shadow;
  transition-property: background-color,background-image,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c1.c1.c1.c1.c1:hover {
  background-color: hsla(218,87%,43%,1);
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  background-image: none;
}

.c1.c1.c1.c1.c1:active {
  background-color: hsla(218,87%,43%,1);
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  background-image: none;
}

.c1.c1.c1.c1.c1:focus-visible {
  background-color: hsla(218,87%,43%,1);
  outline: 1px solid hsla(218,89%,51%,0.09);
  background-image: none;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18),inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
}

.c1.c1.c1.c1.c1 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c2.c2.c2.c2.c2 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c6.c6.c6.c6.c6 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
  margin-right: 4px;
  margin-left: 4px;
}

.c4.c4.c4.c4.c4 {
  opacity: 1;
}

<div>
  <div
    class="c0"
    data-blade-component="floating-action-button"
    elevation="midRaised"
  >
    <button
      class="c1"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c2"
        data-blade-component="base-box"
      >
        <div
          class="c3 c4"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5V11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H11V19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19V13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11H13V5Z"
                data-blade-component="svg-path"
                fill="hsla(0, 0%, 100%, 1)"
              />
            </svg>
          </div>
          <div
            class="c6"
            data-blade-component="base-text"
          >
            Create payment
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;
